--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cd73a54e",
+   "id": "52ec20dc",
    "metadata": {},
    "outputs": [
     {
@@ -46,53 +46,131 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>코드</th>\n",
-       "      <th>날짜</th>\n",
-       "      <th>종가</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Change</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>2023-05-11</td>\n",
-       "      <td>74.74</td>\n",
+       "      <th>2023-01-02</th>\n",
+       "      <td>6960</td>\n",
+       "      <td>7080</td>\n",
+       "      <td>6630</td>\n",
+       "      <td>6670</td>\n",
+       "      <td>846949</td>\n",
+       "      <td>-0.043042</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>2023-05-10</td>\n",
-       "      <td>75.64</td>\n",
+       "      <th>2023-01-03</th>\n",
+       "      <td>6810</td>\n",
+       "      <td>6900</td>\n",
+       "      <td>6640</td>\n",
+       "      <td>6820</td>\n",
+       "      <td>944526</td>\n",
+       "      <td>0.022489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>2023-05-09</td>\n",
-       "      <td>76.55</td>\n",
+       "      <th>2023-01-04</th>\n",
+       "      <td>6750</td>\n",
+       "      <td>6840</td>\n",
+       "      <td>6550</td>\n",
+       "      <td>6800</td>\n",
+       "      <td>578597</td>\n",
+       "      <td>-0.002933</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>2023-05-08</td>\n",
-       "      <td>76.25</td>\n",
+       "      <th>2023-01-05</th>\n",
+       "      <td>6800</td>\n",
+       "      <td>6800</td>\n",
+       "      <td>6530</td>\n",
+       "      <td>6570</td>\n",
+       "      <td>981183</td>\n",
+       "      <td>-0.033824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>2023-05-05</td>\n",
-       "      <td>74.88</td>\n",
+       "      <th>2023-01-06</th>\n",
+       "      <td>6510</td>\n",
+       "      <td>6780</td>\n",
+       "      <td>6470</td>\n",
+       "      <td>6700</td>\n",
+       "      <td>819038</td>\n",
+       "      <td>0.019787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-09</th>\n",
+       "      <td>6730</td>\n",
+       "      <td>6970</td>\n",
+       "      <td>6730</td>\n",
+       "      <td>6830</td>\n",
+       "      <td>753002</td>\n",
+       "      <td>0.019403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-10</th>\n",
+       "      <td>6800</td>\n",
+       "      <td>6920</td>\n",
+       "      <td>6680</td>\n",
+       "      <td>6790</td>\n",
+       "      <td>875824</td>\n",
+       "      <td>-0.005857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-11</th>\n",
+       "      <td>6790</td>\n",
+       "      <td>6930</td>\n",
+       "      <td>6780</td>\n",
+       "      <td>6880</td>\n",
+       "      <td>658596</td>\n",
+       "      <td>0.013255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-12</th>\n",
+       "      <td>6940</td>\n",
+       "      <td>6940</td>\n",
+       "      <td>6760</td>\n",
+       "      <td>6900</td>\n",
+       "      <td>866400</td>\n",
+       "      <td>0.002907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-13</th>\n",
+       "      <td>6880</td>\n",
+       "      <td>6970</td>\n",
+       "      <td>6800</td>\n",
+       "      <td>6820</td>\n",
+       "      <td>1010206</td>\n",
+       "      <td>-0.011594</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       코드         날짜     종가\n",
-       "0  OIL_DU 2023-05-11  74.74\n",
-       "1  OIL_DU 2023-05-10  75.64\n",
-       "2  OIL_DU 2023-05-09  76.55\n",
-       "3  OIL_DU 2023-05-08  76.25\n",
-       "4  OIL_DU 2023-05-05  74.88"
+       "            Open  High   Low  Close   Volume    Change\n",
+       "Date                                                  \n",
+       "2023-01-02  6960  7080  6630   6670   846949 -0.043042\n",
+       "2023-01-03  6810  6900  6640   6820   944526  0.022489\n",
+       "2023-01-04  6750  6840  6550   6800   578597 -0.002933\n",
+       "2023-01-05  6800  6800  6530   6570   981183 -0.033824\n",
+       "2023-01-06  6510  6780  6470   6700   819038  0.019787\n",
+       "2023-01-09  6730  6970  6730   6830   753002  0.019403\n",
+       "2023-01-10  6800  6920  6680   6790   875824 -0.005857\n",
+       "2023-01-11  6790  6930  6780   6880   658596  0.013255\n",
+       "2023-01-12  6940  6940  6760   6900   866400  0.002907\n",
+       "2023-01-13  6880  6970  6800   6820  1010206 -0.011594"
       ]
      },
      "execution_count": 2,
@@ -101,174 +179,45 @@
     }
    ],
    "source": [
-    "OIL_df = pd.read_excel('oil_price_20230512113834-2.xlsx')\n",
-    "OIL_df.head()"
+    "df = fdr.DataReader('215600', '2023')\n",
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "29852c25",
-   "metadata": {},
+   "execution_count": 6,
+   "id": "fee9de93",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>코드</th>\n",
-       "      <th>Close</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2006-04-18</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>65.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2006-04-19</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>65.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2006-04-20</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>64.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2006-04-21</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>63.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2006-04-24</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>64.01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                코드  Close\n",
-       "Date                     \n",
-       "2006-04-18  OIL_DU  65.95\n",
-       "2006-04-19  OIL_DU  65.10\n",
-       "2006-04-20  OIL_DU  64.40\n",
-       "2006-04-21  OIL_DU  63.70\n",
-       "2006-04-24  OIL_DU  64.01"
+       "0.0032679738562091387"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "OIL_df = OIL_df[['날짜','코드','종가']]\n",
-    "OIL_df.rename(columns={'날짜': 'Date'}, inplace=True)\n",
-    "OIL_df.rename(columns={'종가': 'Close'}, inplace=True)\n",
-    "OIL_df.set_index('Date', inplace=True)\n",
-    "OIL_df.sort_index(ascending=True, inplace=True)\n",
-    "OIL_df.head()"
+    "df['Change'][-1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "559963b9",
-   "metadata": {},
+   "id": "d7eea2cd",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>코드</th>\n",
-       "      <th>Close</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-01-02</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>107.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-03</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>107.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-04</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>106.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-07</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>107.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-08</th>\n",
-       "      <td>OIL_DU</td>\n",
-       "      <td>107.58</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                코드   Close\n",
-       "Date                      \n",
-       "2013-01-02  OIL_DU  107.81\n",
-       "2013-01-03  OIL_DU  107.60\n",
-       "2013-01-04  OIL_DU  106.95\n",
-       "2013-01-07  OIL_DU  107.12\n",
-       "2013-01-08  OIL_DU  107.58"
+       "0.0016366612111293755"
       ]
      },
      "execution_count": 7,
@@ -277,41 +226,29 @@
     }
    ],
    "source": [
-    "selected_data = OIL_df.loc['2013-01-01':]\n",
-    "selected_data.head()"
+    "df['Change'][-2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "52ec20dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fee9de93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7eea2cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "39ab828c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.018181818181818188"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Change'][-4]"
+   ]
   },
   {
    "cell_type": "code",
