--- a/07.데이터 정렬 및 가공, 상관관계 분석.ipynb
+++ b/07.데이터 정렬 및 가공, 상관관계 분석.ipynb
@@ -101,28 +101,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2013-01-02</th>\n",
-       "      <td>2.89</td>\n",
+       "      <th>2023-03-02</th>\n",
+       "      <td>3.61</td>\n",
        "      <td>CD91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-03</th>\n",
-       "      <td>2.88</td>\n",
+       "      <th>2023-03-03</th>\n",
+       "      <td>3.61</td>\n",
        "      <td>CD91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-04</th>\n",
-       "      <td>2.88</td>\n",
+       "      <th>2023-03-06</th>\n",
+       "      <td>3.61</td>\n",
        "      <td>CD91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-07</th>\n",
-       "      <td>2.87</td>\n",
+       "      <th>2023-03-07</th>\n",
+       "      <td>3.61</td>\n",
        "      <td>CD91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-08</th>\n",
-       "      <td>2.87</td>\n",
+       "      <th>2023-03-08</th>\n",
+       "      <td>3.61</td>\n",
        "      <td>CD91</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -132,11 +132,11 @@
       "text/plain": [
        "            Close  Name\n",
        "Date                   \n",
-       "2013-01-02   2.89  CD91\n",
-       "2013-01-03   2.88  CD91\n",
-       "2013-01-04   2.88  CD91\n",
-       "2013-01-07   2.87  CD91\n",
-       "2013-01-08   2.87  CD91"
+       "2023-03-02   3.61  CD91\n",
+       "2023-03-03   3.61  CD91\n",
+       "2023-03-06   3.61  CD91\n",
+       "2023-03-07   3.61  CD91\n",
+       "2023-03-08   3.61  CD91"
       ]
      },
      "execution_count": 4,
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "(2708, 2552, 2611, 2564)"
+       "(58, 55, 57, 54)"
       ]
      },
      "execution_count": 6,
@@ -261,53 +261,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2013-01-01</th>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>1064.500000</td>\n",
-       "      <td>1061.640015</td>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-01</th>\n",
+       "      <td>1321.599976</td>\n",
+       "      <td>1323.770020</td>\n",
+       "      <td>1298.069946</td>\n",
+       "      <td>1321.599976</td>\n",
+       "      <td>1321.599976</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-02</th>\n",
-       "      <td>1062.599976</td>\n",
-       "      <td>1064.800049</td>\n",
-       "      <td>1061.500000</td>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-02</th>\n",
+       "      <td>1305.729980</td>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>1304.079956</td>\n",
+       "      <td>1305.729980</td>\n",
+       "      <td>1305.729980</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-03</th>\n",
-       "      <td>1062.400024</td>\n",
-       "      <td>1063.800049</td>\n",
-       "      <td>1059.199951</td>\n",
-       "      <td>1062.599976</td>\n",
-       "      <td>1062.599976</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-03</th>\n",
+       "      <td>1311.060059</td>\n",
+       "      <td>1311.290039</td>\n",
+       "      <td>1298.199951</td>\n",
+       "      <td>1311.060059</td>\n",
+       "      <td>1311.060059</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-04</th>\n",
-       "      <td>1062.000000</td>\n",
-       "      <td>1064.199951</td>\n",
-       "      <td>1060.750000</td>\n",
-       "      <td>1061.900024</td>\n",
-       "      <td>1061.900024</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-06</th>\n",
+       "      <td>1294.780029</td>\n",
+       "      <td>1301.160034</td>\n",
+       "      <td>1293.589966</td>\n",
+       "      <td>1294.780029</td>\n",
+       "      <td>1294.780029</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-07</th>\n",
-       "      <td>1055.000000</td>\n",
-       "      <td>1063.900024</td>\n",
-       "      <td>1033.000000</td>\n",
-       "      <td>1033.099976</td>\n",
-       "      <td>1033.099976</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-07</th>\n",
+       "      <td>1299.000000</td>\n",
+       "      <td>1315.810059</td>\n",
+       "      <td>1296.660034</td>\n",
+       "      <td>1299.000000</td>\n",
+       "      <td>1299.000000</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -317,19 +317,19 @@
       "text/plain": [
        "                   Open         High          Low        Close    Adj Close  \\\n",
        "Date                                                                          \n",
-       "2013-01-01  1062.500000  1064.500000  1061.640015  1062.500000  1062.500000   \n",
-       "2013-01-02  1062.599976  1064.800049  1061.500000  1062.500000  1062.500000   \n",
-       "2013-01-03  1062.400024  1063.800049  1059.199951  1062.599976  1062.599976   \n",
-       "2013-01-04  1062.000000  1064.199951  1060.750000  1061.900024  1061.900024   \n",
-       "2013-01-07  1055.000000  1063.900024  1033.000000  1033.099976  1033.099976   \n",
+       "2023-03-01  1321.599976  1323.770020  1298.069946  1321.599976  1321.599976   \n",
+       "2023-03-02  1305.729980  1317.000000  1304.079956  1305.729980  1305.729980   \n",
+       "2023-03-03  1311.060059  1311.290039  1298.199951  1311.060059  1311.060059   \n",
+       "2023-03-06  1294.780029  1301.160034  1293.589966  1294.780029  1294.780029   \n",
+       "2023-03-07  1299.000000  1315.810059  1296.660034  1299.000000  1299.000000   \n",
        "\n",
        "            Volume Name  \n",
        "Date                     \n",
-       "2013-01-01     0.0   UK  \n",
-       "2013-01-02     0.0   UK  \n",
-       "2013-01-03     0.0   UK  \n",
-       "2013-01-04     0.0   UK  \n",
-       "2013-01-07     0.0   UK  "
+       "2023-03-01       0   UK  \n",
+       "2023-03-02       0   UK  \n",
+       "2023-03-03       0   UK  \n",
+       "2023-03-06       0   UK  \n",
+       "2023-03-07       0   UK  "
       ]
      },
      "execution_count": 8,
@@ -431,53 +431,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2013-01-01</th>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>1064.500000</td>\n",
-       "      <td>1061.640015</td>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-01</th>\n",
+       "      <td>1321.599976</td>\n",
+       "      <td>1323.770020</td>\n",
+       "      <td>1298.069946</td>\n",
+       "      <td>1321.599976</td>\n",
+       "      <td>1321.599976</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-02</th>\n",
-       "      <td>1062.599976</td>\n",
-       "      <td>1064.800049</td>\n",
-       "      <td>1061.500000</td>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>1062.500000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-02</th>\n",
+       "      <td>1305.729980</td>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>1304.079956</td>\n",
+       "      <td>1305.729980</td>\n",
+       "      <td>1305.729980</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-03</th>\n",
-       "      <td>1062.400024</td>\n",
-       "      <td>1063.800049</td>\n",
-       "      <td>1059.199951</td>\n",
-       "      <td>1062.599976</td>\n",
-       "      <td>1062.599976</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-03</th>\n",
+       "      <td>1311.060059</td>\n",
+       "      <td>1311.290039</td>\n",
+       "      <td>1298.199951</td>\n",
+       "      <td>1311.060059</td>\n",
+       "      <td>1311.060059</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-04</th>\n",
-       "      <td>1062.000000</td>\n",
-       "      <td>1064.199951</td>\n",
-       "      <td>1060.750000</td>\n",
-       "      <td>1061.900024</td>\n",
-       "      <td>1061.900024</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-06</th>\n",
+       "      <td>1294.780029</td>\n",
+       "      <td>1301.160034</td>\n",
+       "      <td>1293.589966</td>\n",
+       "      <td>1294.780029</td>\n",
+       "      <td>1294.780029</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-07</th>\n",
-       "      <td>1055.000000</td>\n",
-       "      <td>1063.900024</td>\n",
-       "      <td>1033.000000</td>\n",
-       "      <td>1033.099976</td>\n",
-       "      <td>1033.099976</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>2023-03-07</th>\n",
+       "      <td>1299.000000</td>\n",
+       "      <td>1315.810059</td>\n",
+       "      <td>1296.660034</td>\n",
+       "      <td>1299.000000</td>\n",
+       "      <td>1299.000000</td>\n",
+       "      <td>0</td>\n",
        "      <td>UK</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -487,19 +487,19 @@
       "text/plain": [
        "                   Open         High          Low        Close    Adj Close  \\\n",
        "Date                                                                          \n",
-       "2013-01-01  1062.500000  1064.500000  1061.640015  1062.500000  1062.500000   \n",
-       "2013-01-02  1062.599976  1064.800049  1061.500000  1062.500000  1062.500000   \n",
-       "2013-01-03  1062.400024  1063.800049  1059.199951  1062.599976  1062.599976   \n",
-       "2013-01-04  1062.000000  1064.199951  1060.750000  1061.900024  1061.900024   \n",
-       "2013-01-07  1055.000000  1063.900024  1033.000000  1033.099976  1033.099976   \n",
+       "2023-03-01  1321.599976  1323.770020  1298.069946  1321.599976  1321.599976   \n",
+       "2023-03-02  1305.729980  1317.000000  1304.079956  1305.729980  1305.729980   \n",
+       "2023-03-03  1311.060059  1311.290039  1298.199951  1311.060059  1311.060059   \n",
+       "2023-03-06  1294.780029  1301.160034  1293.589966  1294.780029  1294.780029   \n",
+       "2023-03-07  1299.000000  1315.810059  1296.660034  1299.000000  1299.000000   \n",
        "\n",
        "            Volume Name  \n",
        "Date                     \n",
-       "2013-01-01     0.0   UK  \n",
-       "2013-01-02     0.0   UK  \n",
-       "2013-01-03     0.0   UK  \n",
-       "2013-01-04     0.0   UK  \n",
-       "2013-01-07     0.0   UK  "
+       "2023-03-01       0   UK  \n",
+       "2023-03-02       0   UK  \n",
+       "2023-03-03       0   UK  \n",
+       "2023-03-06       0   UK  \n",
+       "2023-03-07       0   UK  "
       ]
      },
      "execution_count": 11,
@@ -628,7 +628,7 @@
     {
      "data": {
       "text/plain": [
-       "PearsonRResult(statistic=0.15597029898165238, pvalue=3.276003712396741e-16)"
+       "PearsonRResult(statistic=0.5070005866795846, pvalue=4.878277317690711e-05)"
       ]
      },
      "execution_count": 18,
@@ -670,17 +670,17 @@
      "data": {
       "text/plain": [
        "[('UK, KS200',\n",
-       "  PearsonRResult(statistic=0.15597029898165238, pvalue=3.276003712396741e-16)),\n",
+       "  PearsonRResult(statistic=0.5070005866795846, pvalue=4.878277317690711e-05)),\n",
        " ('UK, OIL',\n",
-       "  PearsonRResult(statistic=-0.10063008137734934, pvalue=1.5414357112647307e-07)),\n",
+       "  PearsonRResult(statistic=-0.2831039947611312, pvalue=0.03128820682475924)),\n",
        " ('UK, CD91',\n",
-       "  PearsonRResult(statistic=0.19307152124432247, pvalue=3.745674220293886e-24)),\n",
+       "  PearsonRResult(statistic=-0.17897795388878196, pvalue=0.17886216934713917)),\n",
        " ('KS200, OIL',\n",
-       "  PearsonRResult(statistic=0.09130325112545097, pvalue=1.9452699656160145e-06)),\n",
+       "  PearsonRResult(statistic=0.1474624844848569, pvalue=0.26931308135635246)),\n",
        " ('KS200, CD91',\n",
-       "  PearsonRResult(statistic=-0.36769383901772956, pvalue=1.849222611997992e-87)),\n",
+       "  PearsonRResult(statistic=-0.6677514130260247, pvalue=1.0305506842095527e-08)),\n",
        " ('OIL, CD91',\n",
-       "  PearsonRResult(statistic=0.6244127743146187, pvalue=1.1116480776226611e-292))]"
+       "  PearsonRResult(statistic=-0.4781424069809705, pvalue=0.000147037726580906))]"
       ]
      },
      "execution_count": 20,
