--- a/05.KS200.ipynb
+++ b/05.KS200.ipynb
@@ -16,7 +16,8 @@
     "matplotlib.rcParams['font.family'] = 'Malgun Gothic' # Windows\n",
     "# matplotlib.rcParams['font.family'] = 'AppleGothic' # Mac\n",
     "matplotlib.rcParams['font.size'] = 12 # 글자 크기\n",
-    "matplotlib.rcParams['axes.unicode_minus'] = False # 한글 폰트 사용 시, 마이너스 글자가 깨지는 현상을 해결"
+    "matplotlib.rcParams['axes.unicode_minus'] = False # 한글 폰트 사용 시, 마이너스 글자가 깨지는 현상을 해결\n",
+    "from datetime import date, timedelta"
    ]
   },
   {
@@ -162,6 +163,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ac95a2a",
+   "metadata": {},
+   "source": [
+    "### 오늘 날짜 기준 X일 이전 날짜 구해주는 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1beeaccb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2023-03-10'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today = date.today()\n",
+    "previous_date = today - timedelta(days=70) # days = 뒤에 원하는 숫자 넣으면 됨\n",
+    "today_before = previous_date.strftime(\"%Y-%m-%d\")\n",
+    "today_before"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1c2f569a",
    "metadata": {},
    "source": [
@@ -170,12 +203,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6376bb9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_Data_SaveCsv(KS200_df, '2023-03-01', 'KS200')"
+    "get_Data_SaveCsv(KS200_df, today_before, 'KS200')"
    ]
   }
  ],
