--- a/06.환율.ipynb
+++ b/06.환율.ipynb
@@ -16,7 +16,8 @@
     "matplotlib.rcParams['font.family'] = 'Malgun Gothic' # Windows\n",
     "# matplotlib.rcParams['font.family'] = 'AppleGothic' # Mac\n",
     "matplotlib.rcParams['font.size'] = 12 # 글자 크기\n",
-    "matplotlib.rcParams['axes.unicode_minus'] = False # 한글 폰트 사용 시, 마이너스 글자가 깨지는 현상을 해결"
+    "matplotlib.rcParams['axes.unicode_minus'] = False # 한글 폰트 사용 시, 마이너스 글자가 깨지는 현상을 해결\n",
+    "from datetime import date, timedelta"
    ]
   },
   {
@@ -238,7 +239,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "08496c2c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -253,6 +256,14 @@
    ],
    "source": [
     "UK_df['Close'].isna().any() # NaN 값이 1개 이상 존재하면 True 아니면 False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5b32741",
+   "metadata": {},
+   "source": [
+    "## 데이터 저장 함수"
    ]
   },
   {
@@ -273,6 +284,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f9cb206",
+   "metadata": {},
+   "source": [
+    "### 오늘 날짜 기준 X일 이전 날짜 구해주는 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "00329794",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2023-03-10'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today = date.today()\n",
+    "previous_date = today - timedelta(days=70) # days = 뒤에 원하는 숫자 넣으면 됨\n",
+    "today_before = previous_date.strftime(\"%Y-%m-%d\")\n",
+    "today_before"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "32cec821",
    "metadata": {},
    "source": [
@@ -281,12 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "79e5cdc1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_Data_SaveCsv(UK_df, '2023-03-01', 'UK')"
+    "get_Data_SaveCsv(UK_df, today_before, 'UK')"
    ]
   }
  ],
